--- a/Code/Advanced Programing Project1.vcxproj
+++ b/Code/Advanced Programing Project1.vcxproj
@@ -88,6 +88,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <DisableSpecificWarnings>4996</DisableSpecificWarnings>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -140,19 +141,26 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Administrator.cpp" />
+    <ClCompile Include="Buyer.cpp" />
     <ClCompile Include="Calculator.cpp" />
     <ClCompile Include="Commodity.cpp" />
+    <ClCompile Include="Datebase.cpp" />
+    <ClCompile Include="initial Interface.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Order.cpp" />
+    <ClCompile Include="Seller.cpp" />
     <ClCompile Include="User.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Buyer.h" />
     <ClInclude Include="Commodity.h" />
     <ClInclude Include="Constant.h" />
-    <ClInclude Include="File Processing.h" />
+    <ClInclude Include="Datebase.h" />
     <ClInclude Include="Administrator.h" />
+    <ClInclude Include="Initial Interface.h" />
     <ClInclude Include="iSQL.h" />
     <ClInclude Include="Order.h" />
+    <ClInclude Include="Seller.h" />
     <ClInclude Include="User.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
