--- a/Code/Advanced Programing Project1.vcxproj.filters
+++ b/Code/Advanced Programing Project1.vcxproj.filters
@@ -78,4 +78,15 @@
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="user.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="commodity.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+    <Text Include="order.txt">
+      <Filter>资源文件</Filter>
+    </Text>
+  </ItemGroup>
 </Project>
